--- a/styles/css/templates.css
+++ b/styles/css/templates.css
@@ -47,3 +47,37 @@
 .lava{
     background:radial-gradient(rgb(252, 166, 55),rgb(58, 14, 54));
 }
+.loader {
+    width: 100%;
+    height: 100dvh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+  }
+  .loader--circle {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border-left: 20px solid white;
+    border-right: 20px solid white;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    transition: 1s ease-in-out;
+    animation: spin 2s ease-in-out infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
