--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,5 +1,10 @@
+
+/* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+/* files */
 @import url("./templates.css");
+@import url("./header.css");
 body {
   padding: 0;
   margin: 0;
@@ -14,11 +19,7 @@ body {
 body::-webkit-scrollbar{
   display: none;
 }
-.header{
-  width: 100%;
-  height: 15dvh;
-  background-color: rgb(12, 19, 161);
-}
+
 
 .products {
   display: flex;
@@ -44,6 +45,8 @@ body::-webkit-scrollbar{
   justify-content: space-between;
   align-items: center;
 }
+
+
 button.product--cart {
   color: white;
 
