--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -20,16 +20,19 @@ body::-webkit-scrollbar{
   display: none;
 }
 
+.container{
+  width: 80dvw;
+}
 
 .products {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
   justify-content: center;
-  gap: 20px 10px;
+  gap: 20px;
 }
 
 .product {
-  width: 325px;
+  /* width: 325px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,10 +49,18 @@ body::-webkit-scrollbar{
   align-items: center;
 }
 
+.changeQ{
+    width: 30px;
+    height: 30px;
+    outline: none;
+    border: none;
+    border-radius: 50%;
+    background-color: rgb(87, 147, 87);
+    color:white;
+}
 
 button.product--cart {
   color: white;
-
   outline: none;
   border: none;
   width: 100px;
