--- a/styles/css/templates.css
+++ b/styles/css/templates.css
@@ -1,83 +1,114 @@
+.backpack {
+  background-color: rgb(76, 115, 180);
+}
+.rare {
+  background-color: rgb(44, 108, 23);
+}
+.uncommon {
+  background-color: rgb(28, 104, 166);
+}
+.epic {
+  background-color: rgb(123, 60, 169);
+}
+.legendary {
+  background-color: rgb(145, 74, 29);
+}
+.marvel {
+  background-color: rgb(190, 22, 22);
+}
+.starwars {
+  background-color: rgb(219, 166, 34);
+}
+.slurp {
+  background-color: rgb(18, 182, 191);
+}
+.dc {
+  background-color: rgb(45, 81, 143);
+}
+.icon {
+  background-color: rgb(107, 231, 231);
+}
+.gaminglegends {
+  background-color: rgb(61, 7, 65);
+}
+.dark {
+  background-color: rgb(227, 109, 213);
+}
+.shadow {
+  background-color: rgb(50, 50, 50);
+}
+.molten {
+  background-color: rgb(213, 83, 33);
+}
+.frozen {
+  background-color: rgb(152, 234, 246);
+}
+.lava {
+  background: radial-gradient(rgb(252, 166, 55), rgb(58, 14, 54));
+}
 
- .backpack{
-    background-color: rgb(76, 115, 180);
-}
-.rare{
-    background-color: rgb(44, 108, 23);
-}
-.uncommon{
-    background-color: rgb(28, 104, 166);
-}
-.epic{
-    background-color: rgb(123, 60, 169);
-}
-.legendary{
-    background-color: rgb(145, 74, 29);
-}
-.marvel{
-    background-color: rgb(190, 22, 22);
-}
-.starwars{
-    background-color: rgb(219, 166, 34);
-}
-.slurp{
-    background-color: rgb(18, 182, 191);
-}
-.dc{
-    background-color: rgb(45, 81, 143);
-}
-.icon{
-    background-color: rgb(107, 231, 231);
-}
-.gaminglegends{
-    background-color: rgb(61, 7, 65);
-}
-.dark{
-    background-color: rgb(227, 109, 213);
-}
-.shadow{
-    background-color: rgb(50, 50, 50);
-}
-.molten{
-    background-color: rgb(213, 83, 33);
-}
-.frozen{
-    background-color: rgb(152, 234, 246);
-}
-.lava{
-    background:radial-gradient(rgb(252, 166, 55),rgb(58, 14, 54));
+.additionalInfo--message {
+  width: 200px;
+  height: 50px;
+  background-color: rgb(202, 137, 6);
+  border-radius: 10px;
+  color:rgb(223, 223, 223);
+  display: flex;
+justify-content: center;
+align-items: center;
+text-align: center;
+position:fixed;
+z-index: 2;
+right: 0;
+  bottom: 10px;
+  animation: moveAndDisappear 1.2s ease forwards infinite;
 }
 .loader {
-    width: 100%;
-    height: 100dvh;
-    background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-  }
-  .loader--circle {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    border-left: 20px solid white;
-    border-right: 20px solid white;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    transition: 1s ease-in-out;
-    animation: spin 2s ease-in-out infinite;
-  }
+  width: 100%;
+  height: 100dvh;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+.loader--circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border-left: 20px solid white;
+  border-right: 20px solid white;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  transition: 1s ease-in-out;
+  animation: spin 2s ease-in-out infinite;
+}
 
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
+@keyframes moveAndDisappear{
+    0%{
+        opacity: 0.1;
+        transform: translateX(100%);
     }
-    100% {
-      transform: rotate(360deg);
+    50%{
+        opacity: 1;
+        transform: translateX(-25%);
     }
+    100%{
+        opacity: 0.1;
+        transform: translateX(100%);
+    }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
