sign page animation

--- a/styles/css/sign.css
+++ b/styles/css/sign.css
@@ -1,45 +1,60 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100dvh;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100dvh;
 }
-.sign-window{
-    width: 600px;
-    height: 500px;
-    border-radius: 20px;
-    background-color: rgb(87, 94, 225);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap:10px;
+.sign-window {
+  width: 600px;
+  height: 500px;
+  border-radius: 20px;
+  background-color: rgb(87, 94, 225);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .inputs-section {
-    display: flex;
-    flex-direction: column;
-    gap:20px;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .input-line {
-    background-color:  rgb(67, 73, 172);
-    border-radius: 40px;
-    padding:10px 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-    gap: 10px;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .input-name {
-    height: 10px;
-    text-align: center;
-    transition: .2s ease-in-out;
-    transform: translateY(12px);
+    pointer-events: none;
+  transition: 0.2s ease-in-out;
+  
+}
+.normal--position {
+  opacity: 0.3;
+  transform:  translateY(30px);
+}
+.moved--position {
+  opacity: 1;
+  transform: translateY(0px);
 }
 .input {
-    color:white;
-    background-color:transparent;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.539);
+  border-radius: 40px;
+  background-color: rgb(67, 73, 172);
+  padding: 10px 20px;
+  width: 200px;
+  height: 40px;
+  color: white;
+  outline:transparent;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  text-align: center;
+  text-decoration: none;
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.539); */
+}
+input:focus,input:active{
+    outline:none;
 }
