--- a/styles/css/sign.css
+++ b/styles/css/sign.css
@@ -13,6 +13,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  padding: 10px 0;
 }
 .inputs-section {
   width: 200px;
@@ -28,13 +29,12 @@ body {
   align-items: center;
 }
 .input-name {
-    pointer-events: none;
+  pointer-events: none;
   transition: 0.2s ease-in-out;
-  
 }
 .normal--position {
   opacity: 0.3;
-  transform:  translateY(30px);
+  transform: translateY(30px);
 }
 .moved--position {
   opacity: 1;
@@ -47,7 +47,7 @@ body {
   width: 200px;
   height: 40px;
   color: white;
-  outline:transparent;
+  outline: transparent;
   border: none;
   font-family: "Roboto", sans-serif;
   font-size: 15px;
@@ -55,6 +55,34 @@ body {
   text-decoration: none;
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.539); */
 }
-input:focus,input:active{
-    outline:none;
+input:focus,
+input:active {
+  outline: none;
+}
+
+.signBtn {
+  padding: 10px 20px;
+  border-radius: 20px;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  color: white;
+  transition: ease-in-out 0.2s;
+  border: 1px solid white;
+}
+.signBtn:hover {
+  transform: translateY(-5px);
+  background-color: rgb(87, 94, 225);
+}
+.alternative-pages {
+}
+.link-page {
+  font-style: normal;
+  text-decoration: underline;
+}
+
+.error{
+  color:red;
+  text-align:center;
+  font-size: small;
 }
