--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -33,17 +33,19 @@ body::-webkit-scrollbar{
 .products {
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+  grid-template-rows: repeat(auto,1fr);
   justify-content: center;
   gap: 20px;
 }
 
 .product {
-  /* width: 325px; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap:10px;
   color: white;
   border-radius: 20px;
+  padding:20px 0;
 }
 .product--image {
   width: 250px;
