--- a/styles/css/sign.css
+++ b/styles/css/sign.css
@@ -20,9 +20,17 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 10px;
 }
 .input-line {
-  padding: 10px 20px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 10px;
+  padding-bottom: 3px;
+}
+.input-field {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -49,7 +57,8 @@ body {
   color: white;
   outline: transparent;
   border: none;
-  font-family: "Roboto", sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  letter-spacing: 0.125em;
   font-size: 15px;
   text-align: center;
   text-decoration: none;
@@ -72,17 +81,40 @@ input:active {
 }
 .signBtn:hover {
   transform: translateY(-5px);
-  background-color: rgb(87, 94, 225);
-}
-.alternative-pages {
+  background-color: rgb(78, 84, 207);
 }
 .link-page {
+  opacity: 0.5;
   font-style: normal;
   text-decoration: underline;
 }
-
-.error{
-  color:red;
-  text-align:center;
+p,
+a {
+  color: rgba(255, 255, 255, 0.5);
+}
+.error {
+  color: red;
+  text-align: center;
   font-size: small;
+}
+
+.show-btn {
+  background: rgb(87, 94, 225);
+  border: none;
+  padding: 5px;
+  width: 34px;
+  height: 34px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  border-radius: 20px;
+  transition: ease-in-out 0.1s;
+}
+.show-btn:hover {
+  transform: scale(1.1);
+  background-color: rgb(78, 84, 207);
+}
+.show-btn img {
+  pointer-events: none;
 }
