--- a/styles/css/header.css
+++ b/styles/css/header.css
@@ -1,6 +1,6 @@
 .header {
-  width: 100%;
-  height: 10dvh;
+  width: 100dvw;
+  height: 8dvh;
   background-color: rgb(87, 94, 225);
   padding: 0 50px;
   display: flex;
@@ -14,7 +14,7 @@
 .logo--link {
   font-family: "Nanum Gothic", sans-serif;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 1em;
   color: white;
   text-decoration: none;
 }
