--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -91,6 +91,7 @@ body::-webkit-scrollbar{
 }
 
 .product {
+  border:1px solid white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -102,6 +103,9 @@ body::-webkit-scrollbar{
 }
 .product--image {
   width: 250px;
+}
+.product-name{
+  text-align: center;
 }
 .line {
   display: flex;
