--- a/styles/css/profile.css
+++ b/styles/css/profile.css
@@ -1,11 +1,26 @@
 .main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .prof-window {
-    width: 800px;
-    height: 400px;
-    border-radius: 10px;
-    background-color:rgb(87, 94, 225)
+  width: 800px;
+  height: 400px;
+  border-radius: 10px;
+  background-color: rgb(87, 94, 225);
+}
+.SignOut {
+  padding: 10px 20px;
+  border-radius: 20px;
+  outline: none;
+  border: none;
+  background-color: red;
+  color: white;
+  transition: ease-in-out 0.2s;
+  border: 1px solid white;
+}
+
+.SignOut:hover{
+    transform: translateY(-5px);
+
 }
