added total cost of the cart

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -5,6 +5,7 @@
 /* files */
 @import url("./templates.css");
 @import url("./header.css");
+@import url("./cart.css");
 
 @import url("./profile.css");
 *{
