--- a/styles/css/cart.css
+++ b/styles/css/cart.css
@@ -16,3 +16,17 @@
     align-items: baseline;
     gap:20px
 }
+
+.buy-All{
+    padding:10px 20px;
+    border-radius: 5px;
+    border:none;
+    outline:none;
+    color:white;
+    background-color: rgb(97, 167, 97);
+    transition: ease-in-out .2s;
+}
+.buy-All:hover {
+    transform: scale(1.3);
+    background-color: rgb(107, 179, 107);
+  }
