--- a/styles/css/cart.css
+++ b/styles/css/cart.css
@@ -1,33 +1,42 @@
-.product-delete{
-    border:none;
-    outline: none;
-    border-radius: 10px;
-    background-color: rgb(186, 75, 75);
-    color:white;
-    padding:10px 20px;  
-    transition: ease-in-out .1s;
+.product-delete {
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  background-color: rgb(186, 75, 75);
+  color: white;
+  padding: 10px 20px;
+  transition: ease-in-out 0.1s;
 }
 
-.product-delete:hover{
-    transform: scale(1.1);
+.product-delete:hover {
+  transform: scale(1.1);
 }
-.catalog--info--main{
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    gap:20px
+.catalog--info--main {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  gap: 20px;
 }
 
-.buy-All{
-    padding:10px 20px;
-    border-radius: 5px;
-    border:none;
-    outline:none;
-    color:white;
-    background-color: rgb(97, 167, 97);
-    transition: ease-in-out .2s;
+.buy-All {
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: rgb(97, 167, 97);
+  transition: ease-in-out 0.2s;
 }
 .buy-All:hover {
-    transform: scale(1.3);
-    background-color: rgb(107, 179, 107);
-  }
+  transform: scale(1.3);
+  background-color: rgb(107, 179, 107);
+}
+
+.window--successful--purchase {
+    position: absolute;
+    right: 0;
+    bottom:10px;
+    background-color: green;
+    padding:10px 20px;
+    border-radius: 24px;
+}
